Fix shifting 'about' page

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -81,3 +81,8 @@ body {
     border-bottom: 0;
   }
 }
+
+html { 
+  overflow-x:auto; 
+  overflow-y:scroll; 
+}
